<resources>
    <string name="app_name">Fitness Et Musculation</string>
    <string name="nutrition">Nutrition</string>
    <string name="exercice">Exercice</string>
    <string name="calculateur">Calculateur</string>
    <string name="suplements">Suplements</string>
    <string name="alimentation">Alimentation</string>
    <string name="ex1">Exercice 1</string>
    <string name="imc">IMC</string>
    <string name="img">IMG</string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>
    <string name="Imc"></string>
    <string name="Age"></string>
    <string name="age">Age</string>
    <string name="resImc"></string>
    <string name="calImg">Caluler IMG</string>
    <string name="title_activity_login">Connecter</string>
    <string-array name="type">
        <item>Abdo</item>
        <item>Biceps</item>
        <item>Triceps</item>
        <item>Epaul</item>
        <item>Dos</item>
        <item>Jambe</item>
        <item>Pictreau</item>
    </string-array>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
