<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_gym"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
android:background="@drawable/backg"

    tools:context="com.example.hassi.myapplication.Gym">

    <Button
        android:text="@string/nutrition"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginTop="21dp"
        android:background="#00aeef"
        android:textColor="#ffffff"
        android:id="@+id/button2" />

    <Button
        android:text="@string/calculateur"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_marginTop="18dp"
        android:background="#00aeef"
        android:textColor="#ffffff"
        android:id="@+id/button3" />

    <Button
        android:text="@string/exercice"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="134dp"
        android:id="@+id/button"
        android:background="#00aeef"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
