<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_img"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hassi.myapplication.img">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/Age"
        android:layout_marginTop="67dp"
        android:id="@+id/resDesc"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/calImg" />

    <TextView
        android:text="@string/imc"
        android:layout_height="50dp"
        android:id="@+id/imc"
        android:layout_width="50dp"
        android:layout_alignBottom="@+id/Imc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/Imc" />

    <TextView
        android:text="@string/age"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/age"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/Age"
        android:layout_alignBottom="@+id/age"
        android:layout_alignLeft="@+id/Imc"
        android:layout_alignStart="@+id/Imc" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/Imc"
        android:layout_above="@+id/age"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="39dp" />

    <Button
        android:text="@string/calImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calImg"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_width="700dp"
        android:id="@+id/RdGrp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:text="@string/homme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/homme"
            android:onClick="CreatRadio"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/femme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/femme"
            android:onClick="CreatRadio2"
            android:layout_weight="1" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/age"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/resImg" />


</RelativeLayout>
